# CoastSeg

./: .gitignore  .zenodo.json  0_test_download_imagery_workflow.py  1_download_imagery.py  2_extract_shorelines.py  3_zoo_workflow.py  404.html  5_zoo_workflow_local_model.py  6_zoo_workflow_with_coregistration.py  7_automatic_image_sorter.py  Download_tide_model.ipynb  LICENSE  MANIFEST.in  MNDWI_model_error_notebook.ipynb  README.md  SDS_coastsat_classifier.ipynb  SDS_unet_classifier.ipynb  SDS_zoo_classifier.ipynb  UI_test_notebook.ipynb  add_new_transects_notebook.ipynb  app-Copy1.ipynb  app.ipynb  app.ipynb.old  app_class_mode.ipynb  app_class_mode_new.ipynb  app_transects.ipynb  app_with_fishnet.ipynb  certifications.json  coastseg.ipynb  coastseg_for_google_colab.ipynb  compose.yml  create_bbox_shoreline_geojson copy.ipynb  create_bbox_transects.ipynb  create_transects_bbox_csv.py  custom_map.ipynb  custom_map_logging.ipynb  dockerfile  full_tidal_correction_script.py  index.html  inputs.json  (+33 more)
.github/: .gitignore
.github/ISSUE_TEMPLATE/: bug_report.md  data-contribution-.md  issue--data-contribution.md  question_template.md  (+2 more)
Apply-Tidal_Correction_Script/: index.html
CoastSeg/: UI_models.py  UI_test.py  __init__.py  bbox.py  coastseg_logs.py  coastseg_map_class.py  download_roi.py  exceptions.py  file_functions.py  make_overlapping_roi copy.py  make_overlapping_roi.py  make_rois.py  new_bbox.py  new_make_overlapping_roi.py  new_make_rois.py  zoo_model_module.py
CoastSeg-API-Guide/: index.html
Contribution-Guide/: index.html
Getting-Started_to_contribute/: index.html
How-To-Use-Zoo/: index.html
How-to-Create-Reference-Shorelines-&-Transects&ROIs/: index.html
How-to-Download-Tide-Model/: index.html
How-to-Download-Tide-Model-updated/: index.html
How-to-Filter-Out-Bad-Imagery/: index.html
How-to-Tidally-Correct/: index.html
How-to-Use-Flip-Transects/: index.html
How-to-Use-Scripts/: index.html
How-to-Use_Merge_Sessions/: index.html
basic-install-guide/: index.html
case_study_1/: index.html
case_study_2/: index.html
config/: index.html
contribute-a-workflow/: index.html
contribute-how-edit-website/: index.html
contribute-release-new-package/: index.html
contribute-transects/: index.html
contributing-run-tests/: index.html
debug_scripts/: test_extract_shorelines_with_models.py  test_models.py  test_new_models.py
docs/: Apply-Tidal_Correction_Script.md  CoastSeg-API-Guide.md  Contribution-Guide.md  Getting-Started_to_contribute.md  How-To-Use-Zoo.md  How-to-Create-Reference-Shorelines-&-Transects&ROIs.md  How-to-Create-Reference-Shorelines-&-Transects.md  How-to-Download-Tide-Model-updated.md  How-to-Download-Tide-Model.md  How-to-Filter-Out-Bad-Imagery.md  How-to-Tidally-Correct.md  How-to-Use-Flip-Transects.md  How-to-Use-Scripts.md  How-to-Use_Merge_Sessions  How-to-Use_Merge_Sessions.md  about.md  basic-install-guide.md  case_study_1.md  case_study_2.md  config.md  contribute-a-workflow.md  contribute-how-edit-website.md  contribute-release-new-package.md  contribute-transects.md  contributing-run-tests.md  download_settings.md  edit-website.md  edit_reference_shorelines.md  extract_shoreline_settings.md  extract_shorelines.md  getting-started.md  google-earth-enable-api.md  google-earth-engine-setup.md  how-to-auth.md  how-to-download.md  how-to-extract-shoreline-area.md  how-to-install-pixi.md  how-to-upload-features.md  how-to-use-a-session-another-user.md  how_to_predicts_tides_script.md  (+21 more)
download_settings/: index.html
edit_reference_shorelines/: index.html
examples/: bbox.geojson  rois.geojson  shoreline.geojson  transects.geojson
extract_shoreline_settings/: index.html
extract_shorelines/: index.html
getting-started/: index.html
google-earth-enable-api/: index.html
google-earth-engine-setup/: index.html
how-to-auth/: index.html
how-to-download/: index.html
how-to-extract-shoreline-area/: index.html
how-to-install-pixi/: index.html
how-to-upload-features/: index.html
how-to-use-a-session-another-user/: index.html
how_to_predicts_tides_script/: index.html
install/: coastseg.yml  installation.md
install-miniforge/: index.html
jupyter-notebook-guide/: index.html
mac-install-guide/: index.html
map_guide/: index.html
models/: index.html
notebooks/: CoastSeg Prototype 2 Generating Polygons along a Coastline (1).ipynb  CoastSeg_Prototype_3_Extract_Coastline Vector_within_Bounding_Box.ipynb  Prototype 5_Polygon_Generation_Along_Coastline_in_Bounding_Box.ipynb  Prototype 6_CoastSat_download_ROIs.ipynb  Prototype_7_Using_CoastSat_download_ROIs.ipynb  add_new_transects_notebook.ipynb  geojson_extracter_v1.ipynb  roi.geojson  selected_roi.geojson
paper/: paper.bib  paper.md
references/: index.html
register-existing-gee-account/: index.html
roadmap/: index.html
roi/: index.html
scripts/: apply_tidal_correction.py  aviso_fes_tides.py  clip_and_write_new_nc_files.py  clip_and_write_new_nc_files_cmd_line.py  full_tidal_correction_script.py  gen_csv_per_transect_raw.py  gen_csv_per_transect_tide_corrected.py  georeference_jpgs.py  get_transects_points.py  merge_sessions.py  predict_tides.py  preview_images_for_dates.py  shorten_transects.py  test_merge_sessions.py  tide_regions_map.geojson  transects_swap_points.py  update_transects_bounding_boxespy
search/: search_index.json
secure-install-guide/: index.html
sessions/: index.html
slope-file-format/: index.html
test-zoo-workflow/: index.html
tests/: __init__.py  conftest.py  test_bbox.py  test_coastseg_map.py  test_common.py  test_downloads.py  test_extracted_shoreline.py  test_feature.py  test_file_utilities.py  test_geodata_processing.py  test_imports.py  test_intersections.py  test_merge_utils.py  test_roi.py  test_settings_UI.py  test_shoreline.py  test_shoreline_extraction_area.py  test_tide_correction.py  test_transects.py  test_upload_widget.py
third_party_data/: README.md
tide-file-format/: index.html
update-guide/: index.html
what-is-in-a-session/: index.html
zoo_utils/: make_movie_geospatial_seg.py
(+162 files in other folders)
